--- a/4. Spring Form Data/pom.xml
+++ b/4. Spring Form Data/pom.xml
@@ -1,35 +1,35 @@
 <project>
 	<groupId>com.fardoushlab</groupId>
-	<artifactId>maven-spring</artifactId>
+	<artifactId>spring-form</artifactId>
 	<version>1</version>
 	<packaging>war</packaging>
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<properties>
 		<java.version>11</java.version>
 	</properties>
-	
+
 	<build>
 		<plugins>
-			<plugin>			     
-		        <groupId>org.apache.maven.plugins</groupId>
-		        <artifactId>maven-compiler-plugin</artifactId>
-		        <version>3.8.1</version>
-		        <configuration>
-		          <source>${java.version}</source>
-		          <target>${java.version}</target>
-		        </configuration>
-			</plugin>
-			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-    			<artifactId>maven-war-plugin</artifactId>
-    			<version>3.2.2</version>
-    			<configuration>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.2.2</version>
+				<configuration>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
-			
+
 		</plugins>
 	</build>
 
@@ -41,7 +41,7 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>5.2.3.RELEASE</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/javax.servlet.jsp/jsp-api -->
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
@@ -49,7 +49,7 @@
 			<version>2.3.3</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 
 		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
 		<dependency>
@@ -59,7 +59,7 @@
 			<scope>provided</scope>
 		</dependency>
 
-		
+
 
 
 		<!-- https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/jstl-api -->
@@ -68,6 +68,13 @@
 			<artifactId>jstl-api</artifactId>
 			<version>1.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>taglibs</groupId>
+			<artifactId>standard</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+
 	</dependencies>
 
 
